--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/200w.gif" alt="" /></a>
 								<div class="inner">
 									<h3>Снимки и Меймове</h3>
 									<p>Внимание! Много Дейнки!</p>
