--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
-							<h1>Подземен Кенеф</h1>
+							<h1>Кенефчето</h1>
 							<p>Меймове, Рецензии, и Новини!</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
