--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<div class="inner">
 						<header>
 							
-							<p>Кенефчето:Меймове, Рецензии, и Новини!</p>
+							<p>Кенефчето: Меймове, Рецензии, и Новини!</p>
 						</header>
 						<a href="#main" class="more">Learn More</a>
 					</div>
@@ -41,7 +41,7 @@
 								<div class="inner">
 									<h3>Новини</h3>
 									<p>Кво става по лудницата(света)?</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button fit" >Към Новините</a>
+									<a href="https://kenefcheto.github.io/novini.html" class="button fit" >Към Новините</a>
 								</div>
 							</div>
 
@@ -50,7 +50,7 @@
 								<div class="inner">
 									<h3>Снимки и Меймове</h3>
 									<p>Внимание! Много Дейнки!</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style2 fit" >Към Меймовете</a>
+									<a href="https://kenefcheto.github.io/meimove.html " class="button style2 fit" >Към Меймовете</a>
 								</div>
 							</div>
 
@@ -59,7 +59,7 @@
 								<div class="inner">
 									<h3>Рецензии на Игри и Филми</h3>
 									<p> Според нас кои са най добрите игри и филми!</p>
-									<a href="https://youtu.be/s6zR2T9vn2c" class="button style3 fit" >Към Реценсиите</a>
+									<a href="https://kenefcheto.github.io/igri.html" class="button style3 fit" >Към Рецензиите</a>
 								</div>
 							</div>
 
