--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<div class="inner">
 									<h3>Новини</h3>
 									<p>Кво става по лудницата(света)?</p>
-									<a href="https://kenefcheto.github.io/novini.html" class="button fit" >Към Новините</a>
+									<a href="https://kenefcheto.github.io/News.html" class="button fit" >Към Новините</a>
 								</div>
 							</div>
 
@@ -75,14 +75,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<h2>Etiam veroeros lorem</h2>
-						<p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
+						<h2> БЛАГОДАРЯ НА ВСИЧКИ ПОСЕТИТЕЛИ!</h2>
+						
 
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<
 						</ul>
 						<p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
 					</div>
