--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							</div>
 
 							<div class="box">
-								<a href="https://youtu.be/s6zR2T9vn2c" class="image fit"><img src="images/inputContent_1503273988537.gif" alt="" /></a>
+								<a href=https://kenefcheto.github.io/igri.html" class="image fit"><img src="images/inputContent_1503273988537.gif" alt="" /></a>
 								<div class="inner">
 									<h3>Рецензии на Игри и Филми</h3>
 									<p> Според нас кои са най добрите игри и филми!</p>
