--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<section id="banner" data-video="images/banner">
 					<div class="inner">
 						<header>
+							<h1> DOBRE  DOSHLI VUV PODZEMEN KENEF! </h1>
 							
 							<p>Кенефчето: Меймове, Рецензии, и Новини!</p>
 						</header>
