--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<div class="inner">
 									<h3>Рецензии на Игри и Филми</h3>
 									<p> Според нас кои са най добрите игри и филми!</p>
-									<a href="google.com" class="button style3 fit" >Към Рецензиите</a>
+									<a href="https://kenefcheto.github.io/igri.html" class="button style3 fit" >Към Рецензиите</a>
 								</div>
 							</div>
 
