--- a/warcraft.html
+++ b/warcraft.html
@@ -1,9 +1,9 @@
 <DOCTYPE HTML>
 <html>
-<body background="wow.jpg">
+
 <title>Как е Уаркрафт?!</title>
 		<meta charset="utf-8" />
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 <div class="main">
 
@@ -52,6 +52,6 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+<body background="wow.jpg">
 	</body>
 </html>
