--- a/warcraft.html
+++ b/warcraft.html
@@ -16,7 +16,7 @@
 							
 									
 							<div class="box">
-								<img src="images/warcraft.jpg" alt="" /></a>
+								class="image fit"> <img src="images/warcraft.jpg" alt="" /></a>
 								<div class="inner">
 									<h3>World of Warcraft</h3>
 									<p1>Сиргурно играта с най много коестове в света, Уаркрафт е много добра игра за хора тързащи нещо с което да убият времето си. </p1>
